[Gab] Changed the css properties so that everything is fixed and not responsive

--- a/AdaSaaS_WebApp/web/protected/turtle_style.css
+++ b/AdaSaaS_WebApp/web/protected/turtle_style.css
@@ -1,22 +1,26 @@
 #coding_frame {
+    position : absolute;
+    top : 0px;
+    left : 0px;
     width: 600px;
     height: 500px;
     border-color: #888888;
     border-style: solid;
 }
 #turtle {
-    display: block;
-    clear : both;
-    float : right;
-    margin-left: auto;
-    margin-right: auto;
+    position : absolute;
+    top : 0px;
+    left : 620px;
+    width: 600px;
+    height: 500px;
     border: solid #888888;
 }
 #output {
-    display: block;
-    clear : both;
-    width : 100%;
-    height: 150px;
+    position : absolute;
+    top : 510px;
+    left : 0px;
+    width: 1220px;
+    height: 300px;
     border: solid #888888;
 }
 .btn_img {
@@ -25,8 +29,8 @@
 }
 #loading_im {
     position: absolute;
-    width: 100%; 
-    height: 100%; 
+    width: 1220px; 
+    height: 820px; 
     background: url('images/wait-large.gif') no-repeat center center;
     z-index: 20;
 }
